--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     </head>
 
     <body>
-        <h1>
-            home
-        </h1>
+        <header>
+            <a href="index.html" id="header">
+            <h1>
+                home
+            </h1>
+            </a>
+        </header>
 
         <nav>
             <div onclick="navMenu()" class="navDropBtn">thoughts and the like</div>
             <div id="navDropdown" class="nav-dropdown">
-                <a href="thoughts.html">my thinkings, i think</a>
+                <a href="orkthinks/thoughts.html">my thinkings, i think</a>
                 <!-- <a href="#"></a> -->
                 <!-- <a href="#"></a> -->
             </div>
