orphans again, but the home page is a social link page, test

--- a/index.html
+++ b/index.html
@@ -13,13 +13,9 @@
             </a>
         </header>
 
-        <nav>
-            <div onclick="navMenu()" class="navDropBtn">thoughts and the like</div>
-            <div id="navDropdown" class="nav-dropdown">
-                <a href="orkthinks/thoughts.html">my thinkings, i think</a>
-                <!-- <a href="#"></a> -->
-                <!-- <a href="#"></a> -->
-            </div>
-        </nav>
+        <div id=socialLinks>
+            asdf <br>
+            asd <br>
+        </div>
     </body>
 </html>
