--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <body>
         <header>
             <a href="index.html" id="header">
-            <h1>
-                home
+            <h1 style="text-align: center; background-color: darkmagenta;">
+                David Martin Social Media
             </h1>
             </a>
         </header>
