--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         </header>
 
         <div id=socialLinks>
-            asdf <br>
-            asd <br>
+            <p>
+                asdf
+            </p>
         </div>
     </body>
 </html>
