--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <a href="index.html" id="header">
-            <h1 style="text-align: center; background-color: darkmagenta;">
+            <h1 style="">
                 David Martin Social Media
             </h1>
             </a>
