--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <body>
         <header>
             <a href="index.html" id="header">
-            <h1>
+            <h1 style="text-align: center; 
+            background-color: rgb(131, 0, 131);
+            color: rgb(85, 6, 85);
+            font-family: Futura, Trebuchet MS, Arial, sans-serif;">
                 David Martin Social Media
             </h1>
             </a>
