--- a/home.html
+++ b/home.html
@@ -2,6 +2,10 @@
     <head>
         <link rel="stylesheet" href="index.css">
         <script src="index.js"></script>
+
+        <title>
+            Home
+        </title>
     </head>
 
     <body>
