--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div id=socialLinks>
             <p>
-                asdf
+                <b>placeholder</b>
             </p>
         </div>
     </body>
