--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,18 @@
         <!-- <li><a href="aboutme.html">About Me</a></li> -->
       </ul>
     </nav>
-
     
+    <p id="school" class="aboutme">
+        I am an 18 year old computing student from Scotland. Currently working
+        towards my Masters of computing science at St. Andrews University
+        which I hope to graduate from in 2025. 
+    </p>
+    <p id="freetime" class="aboutme">
+      In my free time I enjoy playing chess and working on small programs such
+      as a chess solver which I posted on my <a href="https://github.com/ObnoxiousOrk/Maze-solver">Github</a>.
+      I usually work in python, but have recently expaned out and dabbled in C++,
+      and also need to use Java for Uni projects.
+    </p>
+        
     </body>
 </html>
