--- a/socials.html
+++ b/socials.html
@@ -13,18 +13,17 @@
         </header>
 
         <nav>
-        <ul>
-            <!-- <li><a href="socials.html">Socials</a></li> -->
-            <li><a href="aboutme.html">About Me</a></li>
-        </ul>
+            <ul>
+                <!-- <li><a href="socials.html">Socials</a></li> -->
+                <li><a href="aboutme.html">About Me</a></li>
+            </ul>
         </nav>
 
-        <p class="socials">
-            Instagram: <a href="https://www.instagram.com/ddaviddmartin/">@ddaviddmartin</a><br>
-            Snapchat: <a>@rapscalliion</a><br>
-            Github: <a href="https://github.com/ObnoxiousOrk">@ObnoxiousOrk</a><br>
-            Steam: <a href="https://steamcommunity.com/id/ObnoxiousOrk/">ObnoxiousOrk</a><br>
-
-        </p>
+        <ul id="socials" style="list-style: none;">
+            <li>Instagram: <a href="https://www.instagram.com/ddaviddmartin/">@ddaviddmartin</a></li>
+            <li>Snapchat: <a>@rapscalliion</a></li>
+            <li>Github: <a href="https://github.com/ObnoxiousOrk">@ObnoxiousOrk</a></li>
+            <li>Steam: <a href="https://steamcommunity.com/id/ObnoxiousOrk/">ObnoxiousOrk</a></li>
+        </ul>
     </body>
 </html>
