--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <nav>
       <ul>
-        <li><a href="socials.html">Socials</a></li>
-        <li><a href="aboutme.html">About Me</a></li>
+        <li><a href="mestuff/socials.html">Socials</a></li>
+        <li><a href="mestuff/aboutme.html">About Me</a></li>
       </ul>
     </nav>
 
