added footer and templates for programming stuff
added a programming hub where you will access all my projects, and a placeholder page for the maze solver where i can explain what it is and how it works along with examples

--- a/index.html
+++ b/index.html
@@ -6,21 +6,28 @@
   </head>
 
   <body>
-    <header>
-      <a href="index.html">
-        <h1>Home</h1>
-      </a>
-    </header>
+    <div id="header">
+      <header>
+        <a href="index.html">
+          <h1>Home</h1>
+        </a>
+      </header>
 
-    <nav>
-      <ul>
-        <li><a href="mestuff/socials.html">Socials</a></li>
-        <li><a href="mestuff/aboutme.html">About Me</a></li>
-      </ul>
-    </nav>
+      <nav>
+        <ul>
+          <li><a href="mestuff/socials.html">Socials</a></li>
+          <li><a href="mestuff/aboutme.html">About Me</a></li>
+          <li><a href="mestuff/programmingprojects/projecthub.html">Programming</a></li>
+        </ul>
+      </nav>
+    </div>
 
     <p class="description">
       Something of a hub for my socials and the like, instead of using linktree or something simmilar I decided to do it the hard way.
     </p>
-    </body>
+    
+    <footer>
+      Last updated Aug 2021 by David Martin :)
+    </footer>
+  </body>
 </html>
