--- a/mestuff/aboutme.html
+++ b/mestuff/aboutme.html
@@ -6,18 +6,21 @@
   </head>
 
   <body>
-    <header>
-        <a href="index.html">
-          <h1>Home</h1>
-        </a>
-      </header>
+    <div id="header">
+      <header>
+          <a href="index.html">
+            <h1>Home</h1>
+          </a>
+        </header>
 
-    <nav>
-      <ul>
-        <li><a href="socials.html">Socials</a></li>
-        <!-- <li><a href="aboutme.html">About Me</a></li> -->
-      </ul>
-    </nav>
+      <nav>
+        <ul>
+          <li><a href="socials.html">Socials</a></li>
+          <!-- <li><a href="aboutme.html">About Me</a></li> -->
+          <li><a href="programmingprojects/projecthub.html">Programming</a></li>
+        </ul>
+      </nav>
+    </div>
     
     <p id="school" class="aboutme">
         I am an 18 year old computing student from Scotland. Currently working
@@ -30,6 +33,9 @@
       I usually work in python, but have recently expaned out and dabbled in C++,
       and also need to use Java for Uni projects.
     </p>
-        
-    </body>
+
+    <footer>
+      Last updated Aug 2021 by David Martin :)
+    </footer>
+  </body>
 </html>
