--- a/mestuff/socials.html
+++ b/mestuff/socials.html
@@ -6,18 +6,21 @@
     </head>
 
     <body>
-        <header>
-        <a href="index.html">
-            <h1>Home</h1>
-        </a>
-        </header>
+        <div id="header">
+            <header>
+                <a href="index.html">
+                    <h1>Home</h1>
+                </a>
+            </header>
 
-        <nav>
-            <ul>
-                <!-- <li><a href="socials.html">Socials</a></li> -->
-                <li><a href="aboutme.html">About Me</a></li>
-            </ul>
-        </nav>
+            <nav>
+                <ul>
+                    <!-- <li><a href="socials.html">Socials</a></li> -->
+                    <li><a href="aboutme.html">About Me</a></li>
+                    <li><a href="programmingprojects/projecthub.html">Programming</a></li>
+                </ul>
+            </nav>
+        </div>
 
         <ul id="socials" style="list-style: none;">
             <li>Instagram: <a href="https://www.instagram.com/ddaviddmartin/">@ddaviddmartin</a></li>
@@ -25,5 +28,11 @@
             <li>Github: <a href="https://github.com/ObnoxiousOrk">@ObnoxiousOrk</a></li>
             <li>Steam: <a href="https://steamcommunity.com/id/ObnoxiousOrk/">ObnoxiousOrk</a></li>
         </ul>
+
+        <!-- <div style="float:right;width:50%;color:black;background:red;margin:5% 5%;">asdf</div> -->
+
+        <footer>
+            Last updated Aug 2021 by David Martin :)
+        </footer>
     </body>
 </html>
