removing links to projecthub in prep to push to main and make live v2 of the website
also slight tweaks to footer style stuff
first mention that this is v2

--- a/mestuff/socials.html
+++ b/mestuff/socials.html
@@ -8,7 +8,7 @@
     <body>
         <div id="header">
             <header>
-                <a href="index.html">
+                <a href="../index.html">
                     <h1>Home</h1>
                 </a>
             </header>
@@ -17,7 +17,7 @@
                 <ul>
                     <!-- <li><a href="socials.html">Socials</a></li> -->
                     <li><a href="aboutme.html">About Me</a></li>
-                    <li><a href="programmingprojects/projecthub.html">Programming</a></li>
+                    <!-- <li><a href="programmingprojects/projecthub.html">Programming</a></li> -->
                 </ul>
             </nav>
         </div>
@@ -32,7 +32,8 @@
         <!-- <div style="float:right;width:50%;color:black;background:red;margin:5% 5%;">asdf</div> -->
 
         <footer>
-            Last updated Aug 2021 by David Martin :)
+            Last updated Aug 2021 by David Martin :)<br>
+            V2
         </footer>
     </body>
 </html>
