--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
           <li><a href="mestuff/socials.html">Socials</a></li>
           <li><a href="mestuff/aboutme.html">About Me</a></li>
-          <li><a href="mestuff/programmingprojects/projecthub.html">Programming</a></li>
+          <!-- <li><a href="mestuff/programmingprojects/projecthub.html">Programming</a></li> -->
         </ul>
       </nav>
     </div>
@@ -27,7 +27,8 @@
     </p>
     
     <footer>
-      Last updated Aug 2021 by David Martin :)
+      Last updated Aug 2021 by David Martin :)<br>
+      V2
     </footer>
   </body>
 </html>
