github link in about me now goes to the right place

--- a/mestuff/aboutme.html
+++ b/mestuff/aboutme.html
@@ -29,7 +29,7 @@
     </p>
     <p id="freetime" class="aboutme">
       In my free time I enjoy playing chess and working on small programs such
-      as a chess solver which I posted on my <a href="https://github.com/ObnoxiousOrk/Maze-solver">Github</a>.
+      as a chess solver which I posted on my <a href="https://github.com/ObnoxiousOrk">Github</a>.
       I usually work in python, but have recently expaned out and dabbled in C++,
       and also need to use Java for Uni projects.
     </p>
