--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <p class="description">
-      Something of a hub for my socials and the like, instead of using linktree or something simmilar I decided to do it the hard way.
+      Something of a hub for my socials and the like, instead of using linktree or something similar I decided to do it the hard way.
     </p>
     
     <footer>
