--- a/mestuff/socials.html
+++ b/mestuff/socials.html
@@ -2,7 +2,7 @@
     <head>
         <link rel="stylesheet" href="../style/style.css">
 
-        <title>Home</title>
+        <title>Socials</title>
     </head>
 
     <body>
@@ -17,12 +17,12 @@
                 <ul>
                     <!-- <li><a href="socials.html">Socials</a></li> -->
                     <li><a href="aboutme.html">About Me</a></li>
-                    <!-- <li><a href="programmingprojects/projecthub.html">Programming</a></li> -->
+                    <li><a href="programmingprojects/index.html">Programming Hub</a></li>
                 </ul>
             </nav>
         </div>
 
-        <ul id="socials" style="list-style: none;">
+        <ul id="socials" class="left" style="list-style: none;">
             <li>Instagram: <a href="https://www.instagram.com/ddaviddmartin/">@ddaviddmartin</a></li>
             <li>Snapchat: <a>@rapscalliion</a></li>
             <li>Github: <a href="https://github.com/ObnoxiousOrk">@ObnoxiousOrk</a></li>
@@ -31,7 +31,7 @@
 
         <!-- <div style="float:right;width:50%;color:black;background:red;margin:5% 5%;">asdf</div> -->
 
-        <footer>
+        <footer class="clear">
             Last updated Aug 2021 by David Martin :)<br>
             V2
         </footer>
