--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
           <li><a href="mestuff/socials.html">Socials</a></li>
           <li><a href="mestuff/aboutme.html">About Me</a></li>
-          <!-- <li><a href="mestuff/programmingprojects/projecthub.html">Programming</a></li> -->
+          <li><a href="mestuff/programmingprojects/index.html">Programming Hub</a></li>
         </ul>
       </nav>
     </div>
@@ -26,7 +26,7 @@
       Something of a hub for my socials and the like, instead of using linktree or something similar I decided to do it the hard way.
     </p>
     
-    <footer>
+    <footer class="clear">
       Last updated Aug 2021 by David Martin :)<br>
       V2
     </footer>
