--- a/mestuff/aboutme.html
+++ b/mestuff/aboutme.html
@@ -17,24 +17,24 @@
         <ul>
           <li><a href="socials.html">Socials</a></li>
           <!-- <li><a href="aboutme.html">About Me</a></li> -->
-          <!-- <li><a href="programmingprojects/projecthub.html">Programming</a></li> -->
+          <li><a href="programmingprojects/index.html">Programming Hub</a></li>
         </ul>
       </nav>
     </div>
     
-    <p id="school" class="aboutme">
+    <p class="aboutme left">
         I am an 18 year old computing student from Scotland. Currently working
         towards my Masters of computing science at St. Andrews University
         which I hope to graduate from in 2025. 
     </p>
-    <p id="freetime" class="aboutme">
+    <p class="aboutme right">
       In my free time I enjoy playing chess and working on small programs such
       as a chess solver which I posted on my <a href="https://github.com/ObnoxiousOrk">Github</a>.
       I usually work in python, but have recently expaned out and dabbled in C++,
       and also need to use Java for Uni projects.
     </p>
 
-    <footer>
+    <footer class="clear">
       Last updated Aug 2021 by David Martin :)<br>
       V2
     </footer>
