--- a/mestuff/programmingprojects/mazesolver.html
+++ b/mestuff/programmingprojects/mazesolver.html
@@ -1,28 +1,36 @@
 <html>
   <head>
     <link rel="stylesheet" href="../../style/style.css">
-
+    <link rel="stylesheet" href="../../style/programmingstyle.css">
     <title>Home</title>
   </head>
 
   <body>
     <div id="header">
-        <header>
-        <a href="index.html">
-            <h1>Home</h1>
-        </a>
-        </header>
+      <header>
+      <a href="index.html">
+          <h1>Home</h1>
+      </a>
+      </header>
 
-        <nav>
+      <nav>
         <ul>
-            <li><a href="mestuff/socials.html">Socials</a></li>
-            <li><a href="mestuff/aboutme.html">About Me</a></li>
-            <li><a href="mestuff/programmingprojects/projecthub.html">Programming</a></li>
+            <li><a href="../socials.html">Socials</a></li>
+            <li><a href="../aboutme.html">About Me</a></li>
+            <li><a href="mestuff/programmingprojects/projecthub.html">Programming Hub</a></li>
         </ul>
-        </nav>
+      </nav>
+    </div>
+    
+    <div class="container">
+      <h2>Background</h2>
+      <p>
+        I started this project around the end of March 2020, just after we went into the first lockdown
+        and it took almost two months to get working how I wanted it.
+      </p> 
     </div>
 
-    <footer>
+    <footer class="clear">
       Last updated Aug 2021 by David Martin :)
     </footer>
   </body>
