added rickroll in socials tab

--- a/mestuff/socials.html
+++ b/mestuff/socials.html
@@ -24,7 +24,7 @@
 
         <ul id="socials" class="left" style="list-style: none;">
             <li>Instagram: <a href="https://www.instagram.com/ddaviddmartin/">@ddaviddmartin</a></li>
-            <li>Snapchat: <a>@rapscalliion</a></li>
+            <li>Snapchat: <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">@rapscalliion</a></li>
             <li>Github: <a href="https://github.com/ObnoxiousOrk">@ObnoxiousOrk</a></li>
             <li>Steam: <a href="https://steamcommunity.com/id/ObnoxiousOrk/">ObnoxiousOrk</a></li>
         </ul>
