--- a/mestuff/aboutme.html
+++ b/mestuff/aboutme.html
@@ -17,7 +17,7 @@
         <ul>
           <li><a href="socials.html">Socials</a></li>
           <!-- <li><a href="aboutme.html">About Me</a></li> -->
-          <li><a href="programmingprojects/index.html">Programming Hub</a></li>
+          <!-- <li><a href="programmingprojects/index.html">Programming Hub</a></li> -->
         </ul>
       </nav>
     </div>
