--- a/mestuff/ass-misc/celestialranking.html
+++ b/mestuff/ass-misc/celestialranking.html
@@ -8,15 +8,15 @@
   <body>
     <div id="header">
       <header>
-        <a href="index.html">
+        <a href="../../index.html">
           <h1>Home</h1>
         </a>
       </header>
 
       <nav>
         <ul>
-          <li><a href="mestuff/socials.html">Socials</a></li>
-          <li><a href="mestuff/aboutme.html">About Me</a></li>
+          <li><a href="../socials.html">Socials</a></li>
+          <li><a href="../aboutme.html">About Me</a></li>
           <!-- <li><a href="mestuff/programmingprojects/index.html">Programming Hub</a></li> -->
         </ul>
       </nav>
