added ass misc hub page to link all my ass misc together
updated various links and a colours, things sorta kinda work? and maybe look good too?

--- a/mestuff/ass-misc/index.html
+++ b/mestuff/ass-misc/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
     <link rel="stylesheet" href="../../style/style.css">
+    <link rel="stylesheet" href="../../style/assmiscstyles.css">
 
-    <title>Celestial Ranking</title>
+    <title>Other Things I've Done</title>
   </head>
 
   <body>
@@ -18,13 +19,23 @@
           <li><a href="../socials.html">Socials</a></li>
           <li><a href="../aboutme.html">About Me</a></li>
           <!-- <li><a href="mestuff/programmingprojects/index.html">Programming Hub</a></li> -->
-          <li><a href="index.html">Other Things I've Done</a></li>
+          <!-- <li><a href="/ass-misc/">Other Things I've Done</a></li> -->
         </ul>
       </nav>
     </div>
 
+    <div id="listProjects" class="left">
+        <ul>
+            <li><a href="celestialranking.html">Celestial Body Ranking</a><br>
+            The definative ranking of most<sup><a href="#foot1">1</a></sup> celestial bodies in our solar system</li>
+        </ul>
+    </div>
     
-    
+    <footer class="clear" id="footnotes">
+        <div id="foot1">
+            1. Not actually most, definitly less that most.
+        </div>
+    </footer>
     <footer class="clear">
       Last updated Aug 2021 by David Martin :)<br>
       V2
