--- a/mestuff/programmingprojects/mazesolver.html
+++ b/mestuff/programmingprojects/mazesolver.html
@@ -2,22 +2,22 @@
   <head>
     <link rel="stylesheet" href="../../style/style.css">
     <link rel="stylesheet" href="../../style/programmingstyle.css">
-    <title>Home</title>
+    <title>A-maze-ing</title>
   </head>
 
   <body>
     <div id="header">
       <header>
-      <a href="index.html">
-          <h1>Home</h1>
-      </a>
+        <a href="index.html">
+          <h1>David's Epic Cool Site (so swaggy)</h1>
+        </a>
       </header>
 
       <nav>
         <ul>
-            <li><a href="../socials.html">Socials</a></li>
-            <li><a href="../aboutme.html">About Me</a></li>
-            <li><a href="mestuff/programmingprojects/projecthub.html">Programming Hub</a></li>
+          <li><a href="../socials.html">Socials</a></li>
+          <li><a href="../aboutme.html">About Me</a></li>
+          <li><a href="index.html">Programming Hub</a></li>
         </ul>
       </nav>
     </div>
