--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="header">
       <header>
         <a href="index.html">
-          <h1>Home</h1>
+          <h1>David's Epic Cool Site (so swaggy)</h1>
         </a>
       </header>
 
@@ -18,6 +18,7 @@
           <li><a href="mestuff/socials.html">Socials</a></li>
           <li><a href="mestuff/aboutme.html">About Me</a></li>
           <!-- <li><a href="mestuff/programmingprojects/index.html">Programming Hub</a></li> -->
+          <li><a href="mestuff/ass-misc/index.html">Other Things I've Done</a></li>
         </ul>
       </nav>
     </div>
