--- a/mestuff/aboutme.html
+++ b/mestuff/aboutme.html
@@ -9,7 +9,7 @@
     <div id="header">
       <header>
           <a href="../index.html">
-            <h1>Home</h1>
+            <h1>David's Epic Cool Site (so swaggy)</h1>
           </a>
         </header>
 
@@ -18,6 +18,7 @@
           <li><a href="socials.html">Socials</a></li>
           <!-- <li><a href="aboutme.html">About Me</a></li> -->
           <!-- <li><a href="programmingprojects/index.html">Programming Hub</a></li> -->
+          <li><a href="ass-misc/index.html">Other Things I've Done</a></li>
         </ul>
       </nav>
     </div>
@@ -25,7 +26,7 @@
     <p class="aboutme left">
         I am an 18 year old computing student from Scotland. Currently working
         towards my Masters of computing science at St. Andrews University
-        which I hope to graduate from in 2025. 
+        which I hope to graduate from in 2026. 
     </p>
     <p class="aboutme right">
       In my free time I enjoy playing chess and working on small programs such
