--- a/mestuff/programmingprojects/index.html
+++ b/mestuff/programmingprojects/index.html
@@ -9,7 +9,7 @@
     <div id="header">
       <header>
           <a href="../../index.html">
-              <h1>Home</h1>
+              <h1>David's Epic Cool Site (so swaggy)</h1>
           </a>
       </header>
 
@@ -17,6 +17,7 @@
         <ul>
           <li><a href="../socials.html">Socials</a></li>
           <li><a href="../aboutme.html">About Me</a></li>
+          <li><a href="../ass-misc/index.html">Other Things I've Done</a></li>
         </ul>
       </nav>
     </div>
