--- a/mestuff/socials.html
+++ b/mestuff/socials.html
@@ -9,7 +9,7 @@
         <div id="header">
             <header>
                 <a href="../index.html">
-                    <h1>Home</h1>
+                    <h1>David's Epic Cool Site (so swaggy)</h1>
                 </a>
             </header>
 
@@ -18,6 +18,7 @@
                     <!-- <li><a href="socials.html">Socials</a></li> -->
                     <li><a href="aboutme.html">About Me</a></li>
                     <!-- <li><a href="programmingprojects/index.html">Programming Hub</a></li> -->
+                    <li><a href="ass-misc/index.html">Other Things I've Done</a></li>
                 </ul>
             </nav>
         </div>
