allowed access to the programming hub
updated the chess and maze pages to say wip

--- a/mestuff/ass-misc/celestialranking.html
+++ b/mestuff/ass-misc/celestialranking.html
@@ -17,7 +17,7 @@
         <ul>
           <li><a href="../socials.html">Socials</a></li>
           <li><a href="../aboutme.html">About Me</a></li>
-          <!-- <li><a href="mestuff/programmingprojects/index.html">Programming Hub</a></li> -->
+          <li><a href="../programmingprojects/index.html">Programming Hub</a></li>
           <li><a href="index.html">Other Things I've Done</a></li>
         </ul>
       </nav>
