--- a/mestuff/programmingprojects/chess.html
+++ b/mestuff/programmingprojects/chess.html
@@ -31,7 +31,7 @@
       </p> 
     </div> -->
 
-    page is wip, coming soon!!
+    wip, coming soon!! (ish, after maze solvers done, we'll see, to be real with you, the chess game dont work ~~yet~~)
 
     <footer class="clear">
       Last updated Aug 2021 by David Martin :)
