--- a/mestuff/socials.html
+++ b/mestuff/socials.html
@@ -17,7 +17,7 @@
                 <ul>
                     <!-- <li><a href="socials.html">Socials</a></li> -->
                     <li><a href="aboutme.html">About Me</a></li>
-                    <!-- <li><a href="programmingprojects/index.html">Programming Hub</a></li> -->
+                    <li><a href="programmingprojects/index.html">Programming Hub</a></li>
                     <li><a href="ass-misc/index.html">Other Things I've Done</a></li>
                 </ul>
             </nav>
