--- a/mestuff/programmingprojects/index.html
+++ b/mestuff/programmingprojects/index.html
@@ -36,7 +36,8 @@
     </div>
 
     <footer class="clear">
-      Last updated Aug 2021 by David Martin :)
+      Last updated Aug 2021 by David Martin :)<br>
+      V2
     </footer>
   </body>
 </html>
