god i really need to be more thorough with these

--- a/mestuff/programmingprojects/chess.html
+++ b/mestuff/programmingprojects/chess.html
@@ -34,7 +34,8 @@
     wip, coming soon!! (ish, after maze solvers done, we'll see, to be real with you, the chess game dont work ~~yet~~)
 
     <footer class="clear">
-      Last updated Aug 2021 by David Martin :)
+      Last updated Aug 2021 by David Martin :)<br>
+      V2
     </footer>
   </body>
 </html>
