--- a/mestuff/programmingprojects/mazesolver.html
+++ b/mestuff/programmingprojects/mazesolver.html
@@ -34,7 +34,8 @@
     page is wip, coming soon!!
 
     <footer class="clear">
-      Last updated Aug 2021 by David Martin :)
+      Last updated Aug 2021 by David Martin :)<br>
+      V2
     </footer>
   </body>
 </html>
