uncommenting background and removing wip

--- a/mestuff/programmingprojects/mazesolver.html
+++ b/mestuff/programmingprojects/mazesolver.html
@@ -23,16 +23,14 @@
       </nav>
     </div>
     
-    <!-- <div class="container">
+    <div class="container">
       <h2>Background</h2>
       <p>
         I started this project around the end of March 2020, just after we went into the first lockdown
         and it took almost two months to get working how I wanted it.
       </p> 
-    </div> -->
-
-    page is wip, coming soon!!
-
+    </div>
+    
     <footer class="clear">
       Last updated Aug 2021 by David Martin :)<br>
       V2
