added design and analysis

--- a/mestuff/programmingprojects/mazesolver.html
+++ b/mestuff/programmingprojects/mazesolver.html
@@ -28,7 +28,22 @@
       <p>
         I started this project around the end of March 2020, just after we went into the first lockdown
         and it took almost two months to get working how I wanted it.
-      </p> 
+      </p>
+    </div>
+
+    <div class="container">
+      <h2>Analysis</h2>
+      <p>
+        The program should take in an image of a maze where the walls are black, and the entrance and exit are at the top and bottom.
+        It should then return an identical image, but the entrance and exit are marked, and the path it found is highlighted.
+        The input maze should be black and white only.
+      </p>
+    </div>
+
+    <div class="container">
+      <h2>Design</h2>
+      <img src="mazeDesign.png" alt="Maze solver structure diagram"></img>
+      <br><br>
     </div>
     
     <footer class="clear">
