made title colour more readable

--- a/mestuff/ass-misc/celestialranking.html
+++ b/mestuff/ass-misc/celestialranking.html
@@ -51,7 +51,7 @@
     </style>
 
     <div id="divranking">
-      <h1 id="official-celestial-bodies-ranking">Official Celestial Bodies Ranking</h1>
+      <h1 id="official-celestial-bodies-ranking" style="color:#e5e5e5;">Official Celestial Bodies Ranking</h1>
       <p>Note before reading:<br>
       &#xA0;&#xA0;&#xA0;&#xA0;&#xA0;&#xA0;I take from Greek mythology even though planets are named after their roman counterparts, afaik most of the myths are the same, but there may be subtle differences, especially with the more minor gods.</p>
       <h2 class="mume-header" id="types-of-object">Types of object</h2>
