made footnote sections look nice everywhere

--- a/mestuff/ass-misc/celestialranking.html
+++ b/mestuff/ass-misc/celestialranking.html
@@ -245,7 +245,7 @@
     V1.1.0</p>
 
     <hr>
-    <section>
+    <section id="footnotes">
       <ol>
         <li id="fn1"><p>All the gods and goddesses were invited to the marriage of Peleus and Thetis (the eventual parents of Achilles). Only Eris, goddess of discord, was not invitedwhich annoyed her, so she arrived with a golden apple inscribed with the word &#x3BA;&#x3B1;&#x3BB;&#x3BB;&#x3AF;&#x3C3;&#x3C4;&#x1FC3; (kallist&#x113;i, &quot;for the fairest&quot;), which she threw among the goddesses. Aphrodite, Hera, and Athena all claimed to be the fairest, and thus the rightful owner of the apple.<br><br>
         The goddesses chose to place the matter before Zeus, who, not wanting to favor one of the goddesses, put the choice into the hands of Paris, a Trojan prince. After bathing in the spring of Mount Ida where Troy was situated, the goddesses appeared before Paris for his decision.<br><br>
