--- a/mestuff/programmingprojects/mazesolver.html
+++ b/mestuff/programmingprojects/mazesolver.html
@@ -45,6 +45,96 @@
       <img src="mazeDesign.png" alt="Maze solver structure diagram"></img>
       <br><br>
     </div>
+
+    <div class="container">
+      <h2>Testing</h2>
+      <table id="testing">
+        <!-- <caption>Table 1</caption> -->
+        <thead>
+          <tr>
+            <!-- <th>Test case</th> -->
+            <th>Input maze</th>
+            <th>Input (scaled up)</th>
+            <th>Expected output</th>
+            <th>Actual output</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td colspan="4">Normal</td>
+          </tr>
+          <tr>
+            <!-- <td class="emptytd"></td> -->
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <!-- <td class="emptytd"></td> -->
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <!-- <td class="emptytd"></td> -->
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td colspan=4>Extreme</td>
+          </tr>
+          <tr>
+            <!-- <td class="emptytd"></td> -->
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <!-- <td class="emptytd"></td> -->
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <!-- <td class="emptytd"></td> -->
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td colspan=4>Exceptional</td>
+          </tr>
+          <tr>
+            <!-- <td class="emptytd"></td> -->
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <!-- <td class="emptytd"></td> -->
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <!-- <td class="emptytd"></td> -->
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
     
     <footer class="clear">
       Last updated Aug 2021 by David Martin :)<br>
