--- a/mestuff/programmingprojects/mazesolver.html
+++ b/mestuff/programmingprojects/mazesolver.html
@@ -67,22 +67,22 @@
             <!-- <td class="emptytd"></td> -->
             <td>&nbsp;</td>
             <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td>Maze completes properly and an exit is found</td>
+            <td>Maze completes properly and an exit is found</td>
           </tr>
           <tr>
             <!-- <td class="emptytd"></td> -->
             <td>&nbsp;</td>
             <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td>Maze completes properly and an exit is found</td>
+            <td>Maze completes properly and an exit is found</td>
           </tr>
           <tr>
             <!-- <td class="emptytd"></td> -->
             <td>&nbsp;</td>
             <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td>Maze completes properly and an exit is found</td>
+            <td>Maze completes properly and an exit is found</td>
           </tr>
           <tr>
             <td colspan=4>Extreme</td>
@@ -91,22 +91,22 @@
             <!-- <td class="emptytd"></td> -->
             <td>&nbsp;</td>
             <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td>Maze completes properly and an exit is found</td>
+            <td>Maze completes properly and an exit is found</td>
           </tr>
           <tr>
             <!-- <td class="emptytd"></td> -->
             <td>&nbsp;</td>
             <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td>Maze completes properly and an exit is found</td>
+            <td>Maze completes properly and an exit is found</td>
           </tr>
           <tr>
             <!-- <td class="emptytd"></td> -->
             <td>&nbsp;</td>
             <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td>Maze completes properly and an exit is found</td>
+            <td>Maze completes properly and an exit is found</td>
           </tr>
           <tr>
             <td colspan=4>Exceptional</td>
