--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
           <li><a href="mestuff/socials.html">Socials</a></li>
           <li><a href="mestuff/aboutme.html">About Me</a></li>
-          <!-- <li><a href="mestuff/programmingprojects/index.html">Programming Hub</a></li> -->
+          <li><a href="mestuff/programmingprojects/index.html">Programming Hub</a></li>
           <li><a href="mestuff/ass-misc/index.html">Other Things I've Done</a></li>
         </ul>
       </nav>
