--- a/mestuff/ass-misc/index.html
+++ b/mestuff/ass-misc/index.html
@@ -26,8 +26,8 @@
 
     <div id="listProjects" class="left">
         <ul>
-            <li><a href="celestialranking.html">Celestial Body Ranking</a><br>
-            The definative ranking of most<sup><a href="#foot1">1</a></sup> celestial bodies in our solar system</li>
+            <!-- <li><a href="celestialranking.html">Celestial Body Ranking</a><br>
+            The definative ranking of most<sup><a href="#foot1">1</a></sup> celestial bodies in our solar system</li> -->
         </ul>
     </div>
     
