--- a/mestuff/aboutme.html
+++ b/mestuff/aboutme.html
@@ -36,7 +36,7 @@
           <li><a href="socials.html">Socials</a></li>
           <!-- <li><a href="aboutme.html">About Me</a></li> -->
           <li><a href="programmingprojects/index.html">Programming Hub</a></li>
-          <li><a href="ass-misc/index.html">Other Things I've Done</a></li>
+          <!-- <li><a href="ass-misc/index.html">Other Things I've Done</a></li> -->
         </ul>
       </nav>
     </div>
