--- a/mestuff/programmingprojects/index.html
+++ b/mestuff/programmingprojects/index.html
@@ -17,7 +17,7 @@
         <ul>
           <li><a href="../socials.html">Socials</a></li>
           <li><a href="../aboutme.html">About Me</a></li>
-          <li><a href="../ass-misc/index.html">Other Things I've Done</a></li>
+          <!-- <li><a href="../ass-misc/index.html">Other Things I've Done</a></li> -->
         </ul>
       </nav>
     </div>
